@@ -7,7 +7,7 @@ GFF3_LOC="/home/rgddata/pipelines/RGDGff3Pipeline/data/ProteinDomain"
 cd $JBROWSE_HOME/bin
 
 echo
-echo "RAT"
+echo "RAT 6.0"
 
 ./remove-track.pl --dir /jbrowse/data_rgd6 --trackLabel ProteinDomain --delete
 
@@ -19,10 +19,38 @@ gunzip -c $GFF3_LOC/rat60_domains.gff3.gz > /tmp/rat60_domains.gff3
   --key "RGD Rat (rn6) Protein Domains" \
   --out /jbrowse/data_rgd6 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
+
+echo "RAT 5.0"
+
+./remove-track.pl --dir /jbrowse/data_rgd5 --trackLabel ProteinDomain --delete
+
+gunzip -c $GFF3_LOC/rat50_domains.gff3.gz > /tmp/rat50_domains.gff3
+
+./flatfile-to-json.pl \
+  --gff /tmp/rat50_domains.gff3 \
+  --trackLabel ProteinDomain \
+  --key "RGD Rat (rn5) Protein Domains" \
+  --out /jbrowse/data_rgd5 \
+  --trackType JBrowse/View/Track/CanvasFeatures \
+  --config "{ \"category\" : \"Protein Domains\" }"
+
+echo "RAT 3.4"
+
+./remove-track.pl --dir /jbrowse/data_rgd5 --trackLabel ProteinDomain --delete
+
+gunzip -c $GFF3_LOC/rat34_domains.gff3.gz > /tmp/rat34_domains.gff3
+
+./flatfile-to-json.pl \
+  --gff /tmp/rat34_domains.gff3 \
+  --trackLabel ProteinDomain \
+  --key "RGD Rat (rn3.4) Protein Domains" \
+  --out /jbrowse/data_rgd3_4 \
+  --trackType JBrowse/View/Track/CanvasFeatures \
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
-echo "HUMAN"
+echo "HUMAN 38"
 
 ./remove-track.pl --dir /jbrowse/data_hg38 --trackLabel ProteinDomain --delete
 
@@ -34,10 +62,24 @@ gunzip -c $GFF3_LOC/human38_domains.gff3.gz > /tmp/human38_domains.gff3
   --key "RGD Human (hg38) Protein Domains" \
   --out /jbrowse/data_hg38 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
+
+echo "HUMAN 37"
+
+./remove-track.pl --dir /jbrowse/data_hg19 --trackLabel ProteinDomain --delete
+
+gunzip -c $GFF3_LOC/human37_domains.gff3.gz > /tmp/human37_domains.gff3
+
+./flatfile-to-json.pl \
+  --gff /tmp/human37_domains.gff3 \
+  --trackLabel ProteinDomain \
+  --key "RGD Human (hg19) Protein Domains" \
+  --out /jbrowse/data_hg19 \
+  --trackType JBrowse/View/Track/CanvasFeatures \
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
-echo "MOUSE"
+echo "MOUSE 38"
 
 ./remove-track.pl --dir /jbrowse/data_mm38 --trackLabel ProteinDomain --delete
 
@@ -49,7 +91,21 @@ gunzip -c $GFF3_LOC/mouse38_domains.gff3.gz > /tmp/mouse38_domains.gff3
   --key "RGD Mouse (mm38) Protein Domains" \
   --out /jbrowse/data_mm38 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
+
+echo "MOUSE 37"
+
+./remove-track.pl --dir /jbrowse/data_mm37 --trackLabel ProteinDomain --delete
+
+gunzip -c $GFF3_LOC/mouse37_domains.gff3.gz > /tmp/mouse37_domains.gff3
+
+./flatfile-to-json.pl \
+  --gff /tmp/mouse37_domains.gff3 \
+  --trackLabel ProteinDomain \
+  --key "RGD Mouse (mm37) Protein Domains" \
+  --out /jbrowse/data_mm37 \
+  --trackType JBrowse/View/Track/CanvasFeatures \
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
 echo "DOG"
@@ -64,7 +120,7 @@ gunzip -c $GFF3_LOC/dog31_domains.gff3.gz > /tmp/dog31_domains.gff3
   --key "RGD Dog (dog3.1) Protein Domains" \
   --out /jbrowse/data_dog3_1 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
 echo "BONOBO"
@@ -79,7 +135,7 @@ gunzip -c $GFF3_LOC/bonobo11_domains.gff3.gz > /tmp/bonobo11_domains.gff3
   --key "RGD Bonobo (panpan1.1) Protein Domains" \
   --out /jbrowse/data_bonobo1_1 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
 echo "SQUIRREL"
@@ -94,7 +150,7 @@ gunzip -c $GFF3_LOC/squirrel20_domains.gff3.gz > /tmp/squirrel20_domains.gff3
   --key "RGD Squirrel (SpeTri2.0) Protein Domains" \
   --out /jbrowse/data_squirrel2_0 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
 echo "CHINCHILLA"
@@ -109,10 +165,10 @@ gunzip -c $GFF3_LOC/chinchilla10_domains.gff3.gz > /tmp/chinchilla10_domains.gff
   --key "RGD Chinchilla (ChiLan1.0) Protein Domains" \
   --out /jbrowse/data_cl1_0 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 
-echo "PIG"
+echo "PIG 11"
 
 ./remove-track.pl --dir /jbrowse/data_pig11_1 --trackLabel ProteinDomain --delete
 
@@ -124,7 +180,20 @@ gunzip -c $GFF3_LOC/pig11_domains.gff3.gz > /tmp/pig11_domains.gff3
   --key "RGD Pig (Sscrofa11.1) Protein Domains" \
   --out /jbrowse/data_pig11_1 \
   --trackType JBrowse/View/Track/CanvasFeatures \
-  --config "{ \"category\" : \"Gene Models/RGD Gene Features\" }"
+  --config "{ \"category\" : \"Protein Domains\" }"
 
+echo "PIG 10"
+
+./remove-track.pl --dir /jbrowse/data_pig10_2 --trackLabel ProteinDomain --delete
+
+gunzip -c $GFF3_LOC/pig10_domains.gff3.gz > /tmp/pig10_domains.gff3
+
+./flatfile-to-json.pl \
+  --gff /tmp/pig10_domains.gff3 \
+  --trackLabel ProteinDomain \
+  --key "RGD Pig (Sscrofa10.2) Protein Domains" \
+  --out /jbrowse/data_pig10_2 \
+  --trackType JBrowse/View/Track/CanvasFeatures \
+  --config "{ \"category\" : \"Protein Domains\" }"
 
 echo "=== OK ==="
